// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button loading unchanged 1`] = `
<div>
  <button
    class="button relative "
    disabled=""
    type="button"
  >
    <div
      class="absolute inset-0 bg-orange-dark justify-center z-10 flex items-center"
    >
      <svg
        class="block"
        height="58"
        viewBox="0 0 60 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="6"
          cy="50"
          fill="#fff"
          r="6"
        >
          <animatetransform
            attributeName="transform"
            begin=".1"
            dur="1s"
            repeatCount="indefinite"
            type="translate"
            values="0 15 ; 0 -15; 0 15"
          />
        </circle>
        <circle
          cx="30"
          cy="50"
          fill="#fff"
          r="6"
        >
          <animatetransform
            attributeName="transform"
            begin=".2"
            dur="1s"
            repeatCount="indefinite"
            type="translate"
            values="0 10 ; 0 -10; 0 10"
          />
        </circle>
        <circle
          cx="54"
          cy="50"
          fill="#fff"
          r="6"
        >
          <animatetransform
            attributeName="transform"
            begin=".3"
            dur="1s"
            repeatCount="indefinite"
            type="translate"
            values="0 5 ; 0 -5; 0 5"
          />
        </circle>
      </svg>
    </div>
    Hello
  </button>
</div>
`;

exports[`renders Button submit unchanged 1`] = `
<div>
  <button
    class="button relative "
    type="submit"
  >
    Hello Button
  </button>
</div>
`;

exports[`renders Button unchanged 1`] = `
<div>
  <button
    class="button relative "
    type="button"
  >
    Hello Button
  </button>
</div>
`;

exports[`renders Button with class unchanged 1`] = `
<div>
  <button
    class="button relative hello"
    type="button"
  >
    Hello Button
  </button>
</div>
`;
